<resources>
    <string name="app_name">Mobile APP</string>
    <string name="dermorax">DERMORAX</string>


    <string name="welcome">Welcome</string>

    <string name="no_account">Not have an account?<b>Sign up</b>></string>
    <string name="sign_un">SIGN UP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="poweredby">Powered by Expendables</string>
    <string name="continueNext">Continue</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_name">Welcome, Lucas</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="predictions">Predictions</string>
    <string name="space">space</string>
    <string name="mapper">Mapper</string>
    <string name="chatbot">ChatBot</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="capture">Capture</string>
    <string name="dermorax_spaced">D E R M O R A X</string>


    <string name="mole_map">Mole Map</string>
    <string name="upload">upload</string>
    <string name="predict">PREDICT</string>
    <string name="x">X</string>
    <string name="prediction_results">Prediction Results</string>
    <string name="d_o_n_e">D O N E</string>
    <string name="d_e_r_m_o_r_a_x">D E R M O R A X</string>
    <string name="p_r_e_d_i_c_t">P R E D I C T</string>
    <string name="view_more_information">View More Information</string>
    <string name="severity">SEVERITY</string>
    <string name="disease_type">DISEASE TYPE</string>
    <string name="_00">00%</string>
    <string name="email">Email</string>
    <string name="you_re_logged_in_as">You\'re Logged in as</string>
    <string name="logout">Logout</string>
    <string name="new_prediction">NEW PREDICTION</string>
    <string name="non_cancerous">NON-CANCEROUS</string>
    <string name="cancerous">CANCEROUS</string>
    <string name="lucas_jayden">Lucas Jayden</string>
    <string name="previous_predictions">PREVIOUS PREDICTIONS</string>
    <string name="news_feed">NEWS FEED</string>
    <string name="exit">EXIT</string>
    <string name="predictions_label">PREDICTIONS</string>
    <string name="type_image_name">Type image name</string>
    <string name="type_your_name">Type your name</string>
    <string name="get_image">Get Image</string>
    <string name="view_previous_prediction">View Previous Prediction</string>
    <string name="todo">TODO</string>
    <string name="log_in">LOG IN</string>
    <string name="processing">Processing......</string>
    <string name="save_image">Save Image</string>
    <string name="mole_mapper">Mole Mapper</string>
    <string name="front_view">Front View</string>
    <string name="back_view">Back View</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="schedule">Schedule</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About US</string>
    <string name="open">open</string>
    <string name="close">Close</string>
    <string name="show_date_range_picker">Show Date Range Picker</string>


    <string name="mole_mapper">Mole Mapper</string>
    <string name="front_view">Front View</string>
    <string name="back_view">Back View</string>



</resources>