<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPage"
    android:background="@color/dark_pruple">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/dermorax"
        android:textColor="#BCBCBC"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="112dp"
        android:background="@color/dark_pruple"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appTitle" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/custom_button_logins"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appTitle"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="238dp"
        android:layout_height="54dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/user"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signInButton" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="238dp"
        android:layout_height="54dp"
        android:layout_marginTop="174dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/poweredByText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="238dp"
        android:layout_height="54dp"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <TextView

        android:id="@+id/poweredByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/poweredby"
        android:textColor="#BCBCBC"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/continue_button"
        android:text="@string/continueNext"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/id_wrong_credentials2"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="25dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />


</androidx.constraintlayout.widget.ConstraintLayout>