<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePage"
    android:background="@color/dark_pruple" >


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/dermorax"
        android:textColor="#BCBCBC"
        android:textSize="43sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <TextView

        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="249dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/welcome"
        android:textColor="#BCBCBC"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo1"
        app:layout_constraintVertical_bias="0.058" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="391dp"
        android:layout_height="247dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageViewSlider"
        android:layout_width="64dp"
        android:layout_height="5dp"
        android:layout_marginTop="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewWelcome"
        app:srcCompat="@drawable/light"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageViewbackdrop"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bg_1" />

    <ImageView
        android:id="@+id/imageViewbackdrop2"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bg_2" />

    <Button
        android:id="@+id/buttonSignIN"
        android:layout_width="236dp"
        android:layout_height="51dp"
        android:layout_marginBottom="104dp"
        android:background="@color/light_pruple"
        android:gravity="center"
        android:outlineSpotShadowColor="@color/light_pruple"
        android:text="@string/sign_in"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

    <Button
        android:id="@+id/buttonSignUP"
        android:layout_width="232dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:background="@color/dark_pruple"
        android:gravity="center"
        android:outlineSpotShadowColor="@color/dark_pruple"
        android:text="@string/sign_un"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewbackdrop2"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>

