<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserWelcome"
    android:background="@color/pale_white"
    >

    <TextView
        android:id="@+id/id_user_welcm_bg"
        android:layout_width="match_parent"
        android:layout_height="552dp"
        android:background="@drawable/user_welcome_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/dermorax"
        android:textColor="#BCBCBC"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="286dp"
        android:layout_height="241dp"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/userDp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/round_logo" />

    <TextView
        android:id="@+id/id_user_welcm_bg2"
        android:layout_width="547dp"
        android:layout_height="169dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/user_wel_bg2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userDp"
        android:layout_width="223dp"
        android:layout_height="150dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/user_pic_welcome"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/userDP_shape_overlay"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/user_dp" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="138dp"
        android:layout_height="51dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/get_started"
        android:drawableEnd="@drawable/right_arrow"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/id_welcome"
        android:layout_width="318dp"
        android:layout_height="39dp"
        android:layout_marginTop="164dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/welcome_name"
        android:textColor="@color/pale_white"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userDp" />

    <Button
        android:id="@+id/id_user_welcm_dp_edit"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/edit"
        app:layout_constraintStart_toStartOf="@+id/userDp"
        app:layout_constraintTop_toTopOf="@+id/userDp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>